# tg-claude-bridge

./: .env.example  .gitignore  BOT_IMPROVEMENT_PLAN.md  DUAL_AGENT_GUIDE.md  ENHANCED_WORKFLOW_GUIDE.md  INSTALL_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTOR_NOTES.md  USAGE.md  bot_orchestrator.py  bot_recovery.py  bot_workflows.py  claude-bridge.js  com.user.tg-cli-bridge.plist  install.sh  main.py  main_langchain.py  main_mcp.py  main_opencode.py  main_simple.py  opencode_agent.py  package.json  pnpm-lock.yaml  pyproject.toml  task_master_client.py  test-config.py  test-stream-json.py  tg-bridge  tg-cli-bridge.service  uninstall.sh
.taskmaster/: state.json
.taskmaster/docs/: prd-init.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/: checkpoint_log.md
tests/: conftest.py
tests/unit/: test_main.py  test_streaming.py
